crates/cockpit-editor/tests/snapshots/golden_editor__golden_append_after_cursor.snap
---
source: crates/cockpit-editor/tests/golden_editor.rs
expression: "snapshot(\"append_after_cursor\", \"ab\", &keys)"
---
case:   append_after_cursor
start:  "ab"
keys:   a X <Esc>
mode:   Normal
cursor: 0:2
dirty:  true
buffer:
  | aX‸b
