crates/cockpit-editor/tests/snapshots/golden_editor__golden_count_delete_lines.snap
---
source: crates/cockpit-editor/tests/golden_editor.rs
expression: "snapshot(\"count_delete_lines\", \"one\\ntwo\\nthree\\nfour\", &chars(\"2dd\"))"
---
case:   count_delete_lines
start:  "one\ntwo\nthree\nfour"
keys:   2 d d
mode:   Normal
cursor: 0:0
dirty:  true
buffer:
  | ‸three
  | four
