crates/cockpit-editor/tests/snapshots/golden_editor__golden_go_to_file_ends.snap
---
source: crates/cockpit-editor/tests/golden_editor.rs
expression: "snapshot(\"go_to_file_ends\", \"top\\nmiddle\\nbottom\", &chars(\"Ggg\"))"
---
case:   go_to_file_ends
start:  "top\nmiddle\nbottom"
keys:   G g g
mode:   Normal
cursor: 0:0
dirty:  false
buffer:
  | ‸top
  | middle
  | bottom
