crates/cockpit-editor/tests/snapshots/golden_editor__golden_normal_motions.snap
---
source: crates/cockpit-editor/tests/golden_editor.rs
expression: "snapshot(\"normal_motions\", \"alpha\\nbravo\\ncharlie\", &chars(\"lljl\"))"
---
case:   normal_motions
start:  "alpha\nbravo\ncharlie"
keys:   l l j l
mode:   Normal
cursor: 1:3
dirty:  false
buffer:
  | alpha
  | bra‸vo
  | charlie
